tests/semantic/invalid/initializer_mismatch.mc
bool flag = 5 + 3.2;
print flag;
